# BreakID

./: .gitignore  CMakeLists.txt  README.md  README.txt  generate_installDIR.sh  install.sh
ref_files/: cosmic_anno_fusion_20171019.txt  sino_anno_fusion_20171017.txt
src/: BamAlignment.cc  BamAlignment.h  BreakID.cc  BreakID.h  CMakeLists.txt  Cigar.cc  Cigar.h  CigarRoller.cc  CigarRoller.h  RefSeqTranscript.cc  RefSeqTranscript.h  installdir.h  nibtools.cc  nibtools.h  util_bam.cc  util_bam.h  util_bed.cc  util_bed.h  util_cluster.cc  util_cluster.h
